--- a/caso1.ipynb
+++ b/caso1.ipynb
@@ -724,7 +724,8 @@
    ],
    "source": [
     "#Transofrmamos las tarjetas en ambas tablas a string por recomendacion del auditor\n",
-    "transaction_df[\"card\"]"
+    "transaction_df[\"card\"].astype(str)\n",
+    "credit_card_df[\"card\"].astype(str)"
    ]
   },
   {
@@ -805,31 +806,6 @@
     "#con los registros en la credit card un problema y es que esta en notacion cientifica\n",
     "#here we can see that the card is in scientific notation\n",
     "credit_card_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dtype('int64')"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#Confirmando el data type vemos que esta en un float64 lo cual difiere con el \n",
-    "#formato en de las trasnacciones ya que deben ser exactamente iguales\n",
-    "\n",
-    "#if we look at the data type we'll see that is in float64 a diferent format\n",
-    "#from the transactions and this shoultnt be since as FK they must be equal\n",
-    "credit_card_df[\"card\"].dtype"
    ]
   },
   {
@@ -974,17 +950,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\sebas\\AppData\\Local\\Temp\\ipykernel_20912\\3221593387.py:1: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
-      "  merchant_category_df[card_holder_df.duplicated()]\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -1021,13 +989,13 @@
        "Index: []"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "merchant_category_df[card_holder_df.duplicated()]"
+    "merchant_category_df[merchant_category_df.duplicated()]"
    ]
   },
   {
@@ -1314,39 +1282,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0          3561954487988605\n",
-       "1          5135837688671496\n",
-       "2           213193946980303\n",
-       "3          4263694062533017\n",
-       "4             4498002758300\n",
-       "               ...         \n",
-       "3495    4723783028106084756\n",
-       "3496    4165305432349489280\n",
-       "3497       5361779664174555\n",
-       "3498       4188164051171486\n",
-       "3499    4723783028106084756\n",
-       "Name: card, Length: 3500, dtype: int64"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "credit_card_df\n",
-    "transaction_df[\"card\"]\n",
-    "#credit_card_df[\"card\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
    "outputs": [],
@@ -1569,78 +1504,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id_merchant</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>id_merchant</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48</th>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>82</th>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>89</th>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>114</th>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "             id_merchant\n",
-       "id_merchant             \n",
-       "12                     2\n",
-       "48                     2\n",
-       "82                     2\n",
-       "89                     2\n",
-       "114                    2\n",
-       "5                      1"
+       "id_merchant\n",
+       "12     2\n",
+       "48     2\n",
+       "82     2\n",
+       "89     2\n",
+       "114    2\n",
+       "5      1\n",
+       "Name: id_merchant, dtype: int64"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1649,7 +1529,7 @@
     "#Comercios con mas transacciones sospechosas\n",
     "#Merchants biggest amount of suspicious transactions \n",
     "Top_suspicious_merchants = suspiciusTransac.groupby([\"id_merchant\"])[\"id_merchant\"].count().sort_values(ascending=False).head(6)\n",
-    "pd.DataFrame(Top_suspicious_merchants)\n"
+    "Top_suspicious_merchants\n"
    ]
   },
   {
@@ -2013,171 +1893,6 @@
    "source": [
     "mask_suspi_top = merchant_df[\"id\"].isin(top_suspicious_merchants.index)\n",
     "merchant_df[mask_suspi_top]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>day</th>\n",
-       "      <th>hour</th>\n",
-       "      <th>amount</th>\n",
-       "      <th>card</th>\n",
-       "      <th>id_merchant</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>222</td>\n",
-       "      <td>2018-01-01</td>\n",
-       "      <td>21:35:10</td>\n",
-       "      <td>6.22</td>\n",
-       "      <td>3561954487988605</td>\n",
-       "      <td>69</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2045</td>\n",
-       "      <td>2018-01-01</td>\n",
-       "      <td>21:43:12</td>\n",
-       "      <td>3.83</td>\n",
-       "      <td>5135837688671496</td>\n",
-       "      <td>85</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>395</td>\n",
-       "      <td>2018-01-01</td>\n",
-       "      <td>22:41:21</td>\n",
-       "      <td>9.61</td>\n",
-       "      <td>213193946980303</td>\n",
-       "      <td>82</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3309</td>\n",
-       "      <td>2018-01-01</td>\n",
-       "      <td>23:13:30</td>\n",
-       "      <td>19.03</td>\n",
-       "      <td>4263694062533017</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>567</td>\n",
-       "      <td>2018-01-01</td>\n",
-       "      <td>23:15:10</td>\n",
-       "      <td>2.95</td>\n",
-       "      <td>4498002758300</td>\n",
-       "      <td>64</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3495</th>\n",
-       "      <td>1979</td>\n",
-       "      <td>2018-12-31</td>\n",
-       "      <td>01:24:15</td>\n",
-       "      <td>4.84</td>\n",
-       "      <td>4723783028106084756</td>\n",
-       "      <td>106</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3496</th>\n",
-       "      <td>2342</td>\n",
-       "      <td>2018-12-31</td>\n",
-       "      <td>03:33:28</td>\n",
-       "      <td>3.26</td>\n",
-       "      <td>4165305432349489280</td>\n",
-       "      <td>64</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3497</th>\n",
-       "      <td>948</td>\n",
-       "      <td>2018-12-31</td>\n",
-       "      <td>05:53:58</td>\n",
-       "      <td>10.73</td>\n",
-       "      <td>5361779664174555</td>\n",
-       "      <td>19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3498</th>\n",
-       "      <td>1168</td>\n",
-       "      <td>2018-12-31</td>\n",
-       "      <td>08:22:17</td>\n",
-       "      <td>11.87</td>\n",
-       "      <td>4188164051171486</td>\n",
-       "      <td>54</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3499</th>\n",
-       "      <td>2476</td>\n",
-       "      <td>2018-12-31</td>\n",
-       "      <td>09:50:25</td>\n",
-       "      <td>19.75</td>\n",
-       "      <td>4723783028106084756</td>\n",
-       "      <td>16</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>3500 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        id         day      hour  amount                 card  id_merchant\n",
-       "0      222  2018-01-01  21:35:10    6.22     3561954487988605           69\n",
-       "1     2045  2018-01-01  21:43:12    3.83     5135837688671496           85\n",
-       "2      395  2018-01-01  22:41:21    9.61      213193946980303           82\n",
-       "3     3309  2018-01-01  23:13:30   19.03     4263694062533017            5\n",
-       "4      567  2018-01-01  23:15:10    2.95        4498002758300           64\n",
-       "...    ...         ...       ...     ...                  ...          ...\n",
-       "3495  1979  2018-12-31  01:24:15    4.84  4723783028106084756          106\n",
-       "3496  2342  2018-12-31  03:33:28    3.26  4165305432349489280           64\n",
-       "3497   948  2018-12-31  05:53:58   10.73     5361779664174555           19\n",
-       "3498  1168  2018-12-31  08:22:17   11.87     4188164051171486           54\n",
-       "3499  2476  2018-12-31  09:50:25   19.75  4723783028106084756           16\n",
-       "\n",
-       "[3500 rows x 6 columns]"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "transaction_df"
    ]
   },
   {
